Remove dnsProvider from service
Removes all calls to provider specific logic from the dns service. The
dns service no longer requires knowing about the dns provider and is
only used for CRUD operations on DNS related k8s resources.

Future work will remove the instance wide DNSProvider resource, and any
controllers requiring provider access will instantiate their own
instance of the DNSProvider resource.

--- a/config/samples/kuadrant.io_v1alpha1_dnsrecord-geo.yaml
+++ b/config/samples/kuadrant.io_v1alpha1_dnsrecord-geo.yaml
@@ -9,6 +9,8 @@ metadata:
     app.kubernetes.io/created-by: multicluster-gateway-controller
   name: dnsrecord-geo
 spec:
+  managedZone:
+    name: mgc-dev-mz
   endpoints:
     - dnsName: dnsrecord-geo.mn.hcpapps.net
       recordTTL: 60
@@ -37,7 +39,7 @@ spec:
       recordType: A
       setIdentifier: 50.16.23.1
       providerSpecific:
-        - name: "aws/weight"
+        - name: "weight"
           value: "60"
       labels:
         id: 50.16.23.1
@@ -48,7 +50,7 @@ spec:
       recordType: A
       setIdentifier: 50.16.23.2
       providerSpecific:
-        - name: "aws/weight"
+        - name: "weight"
           value: "60"
       labels:
         id: 50.16.23.2
