--- a/config/samples/kuadrant.io_v1alpha1_dnsrecord-ns.yaml
+++ b/config/samples/kuadrant.io_v1alpha1_dnsrecord-ns.yaml
@@ -9,6 +9,8 @@ metadata:
     app.kubernetes.io/created-by: multicluster-gateway-controller
   name: dnsrecord-ns
 spec:
+  managedZone:
+    name: mgc-dev-mz
   endpoints:
     - dnsName: testns.hcpapps.net
       recordTTL: 172800
