Health check agent

--- a/config/crd/bases/kuadrant.io_dnspolicies.yaml
+++ b/config/crd/bases/kuadrant.io_dnspolicies.yaml
@@ -52,6 +52,8 @@ spec:
                   port:
                     type: integer
                   protocol:
+                    description: HealthProtocol represents the protocol to use when
+                      making a health check request
                     type: string
                 type: object
               loadBalancing:
