Add custom weights to DNSPolicy
Adds an option to the `DNSPolicy.LoadBalancing.Weighted` spec to add
custom weights for attributes set on target clusters via labels. The
custom attributes are checked during the calculation of the target
clusters weight, and if attributes match, the custom weight is applied.

Example

```
spec:
  loadBalancing:
    weighted:
      custom:
      - value: AWS
        weight: 60
      - value: GCP
        weight: 255
      defaultWeight: 120
```
```
kubectl label --overwrite managedcluster cluster-1 kuadrant.io/lb-attribute-custom-weight=AWS
kubectl label --overwrite managedcluster cluster-2 kuadrant.io/lb-attribute-custom-weight=GCP
kubectl label --overwrite managedcluster cluster-3 kuadrant.io/lb-attribute-custom-weight-
```

The above would favour the GCP cluster(cluster-2) over any other, and
the AWS cluster(cluster-1) would recieve the least traffic with
cluster-3 falling back to the default weight getting a medium amount of
traffic.

--- a/config/crd/bases/kuadrant.io_dnspolicies.yaml
+++ b/config/crd/bases/kuadrant.io_dnspolicies.yaml
@@ -70,6 +70,17 @@ spec:
                     type: object
                   weighted:
                     properties:
+                      custom:
+                        items:
+                          properties:
+                            value:
+                              type: string
+                            weight:
+                              maximum: 255
+                              minimum: 0
+                              type: integer
+                          type: object
+                        type: array
                       defaultWeight:
                         default: 120
                         description: defaultWeight is the record weight to use when
