--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -29,6 +29,14 @@ rules:
 - apiGroups:
   - cluster.open-cluster-management.io
   resources:
+  - managedclusters
+  verbs:
+  - get
+  - list
+  - watch
+- apiGroups:
+  - cluster.open-cluster-management.io
+  resources:
   - placementdecisions
   verbs:
   - create
