--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -101,6 +101,34 @@ rules:
 - apiGroups:
   - kuadrant.io
   resources:
+  - dnshealthcheckprobes
+  verbs:
+  - create
+  - delete
+  - get
+  - list
+  - patch
+  - update
+  - watch
+- apiGroups:
+  - kuadrant.io
+  resources:
+  - dnshealthcheckprobes/finalizers
+  verbs:
+  - get
+  - patch
+  - update
+- apiGroups:
+  - kuadrant.io
+  resources:
+  - dnshealthcheckprobes/status
+  verbs:
+  - get
+  - patch
+  - update
+- apiGroups:
+  - kuadrant.io
+  resources:
   - dnspolicies
   verbs:
   - create
