--- a/config/crd/kustomization.yaml
+++ b/config/crd/kustomization.yaml
@@ -5,6 +5,7 @@ resources:
 - bases/kuadrant.io_dnsrecords.yaml
 - bases/kuadrant.io_dnspolicies.yaml
 - bases/kuadrant.io_managedzones.yaml
+- bases/kuadrant.io_tlspolicies.yaml
 #+kubebuilder:scaffold:crdkustomizeresource
 
 patchesStrategicMerge:
