--- a/config/crd/kustomization.yaml
+++ b/config/crd/kustomization.yaml
@@ -6,6 +6,7 @@ resources:
 - bases/kuadrant.io_dnspolicies.yaml
 - bases/kuadrant.io_managedzones.yaml
 - bases/kuadrant.io_dnshealthcheckprobes.yaml
+- bases/kuadrant.io_tlspolicies.yaml
 #+kubebuilder:scaffold:crdkustomizeresource
 
 patchesStrategicMerge:
