initial pass at wildcard support
update go version

integration tests (simplify down to 1 listener and make sure we allow for certs not being ready)

update lint

update e2e

remove requeue test

add some wildcard unit tests

integration tests

--- a/config/cert-manager/kustomization.yaml
+++ b/config/cert-manager/kustomization.yaml
@@ -15,4 +15,4 @@ helmCharts:
           namespace: cert-manager
       installCRDs: true
       # Customize active controllers
-      extraArgs: ["--controllers=*,-ingress-shim"]
+      extraArgs: ["--controllers=*,-ingress-shim","--enable-certificate-owner-ref=true"]
