--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -26,10 +26,10 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-go@v4
         with:
-          go-version: v1.19
+          go-version: v1.20.x
       - uses: golangci/golangci-lint-action@v2
         with:
-          version: v1.49.0
+          version: v1.53.3
           only-new-issues: true
           args: --timeout=5m
           skip-go-installation: true
@@ -37,10 +37,10 @@ jobs:
     name: Verify code
     runs-on: ubuntu-latest
     steps:
-      - name: Set up Go 1.19.x
+      - name: Set up Go 1.20.x
         uses: actions/setup-go@v4
         with:
-          go-version: 1.19.x
+          go-version: 1.20.x
         id: go
       - name: Check out code
         uses: actions/checkout@v2
@@ -51,10 +51,10 @@ jobs:
     name: Verify manifests
     runs-on: ubuntu-latest
     steps:
-      - name: Set up Go 1.19.x
+      - name: Set up Go 1.20.x
         uses: actions/setup-go@v4
         with:
-          go-version: 1.19.x
+          go-version: 1.20.x
         id: go
       - name: Check out code
         uses: actions/checkout@v2
@@ -65,10 +65,10 @@ jobs:
     name: Verify imports
     runs-on: ubuntu-latest
     steps:
-      - name: Set up Go 1.19.x
+      - name: Set up Go 1.20.x
         uses: actions/setup-go@v4
         with:
-          go-version: 1.19.x
+          go-version: 1.20.x
         id: go
       - name: Check out code
         uses: actions/checkout@v2
@@ -82,7 +82,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-go@v4
         with:
-          go-version: v1.19
+          go-version: v1.20
       - name: Run suite
         run: |
           make test-integration
@@ -93,7 +93,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-go@v4
         with:
-          go-version: v1.19
+          go-version: v1.20
       - name: Run suite
         run: |
           make test-unit
