pitstop: incorporating changes from https://github.com/Kuadrant/multicluster-gateway-controller/issues/256 making istio installable by kustomize moving some configuration steps from script to kustomize, e.g. removing the webhooks for metalb decoupling kind cluster creation and configuration in the script
Co-authored-by: mikenairn <mnairn@redhat.com>

--- a/config/quick-start/control-cluster/controller/kustomization.yaml
+++ b/config/quick-start/control-cluster/controller/kustomization.yaml
@@ -1,6 +1,6 @@
 resources:
-  - ../../gateway-api
-  - ../../default
+  - ../../../gateway-api
+  - ../../../default
   - configmap.yaml
   - managed_cluster_set.yaml
   - managed_cluster_set_binding.yaml
