--- a/config/samples/kuadrant.io_v1alpha1_tlspolicy.yaml
+++ b/config/samples/kuadrant.io_v1alpha1_tlspolicy.yaml
@@ -9,4 +9,11 @@ metadata:
     app.kubernetes.io/created-by: tmp
   name: tlspolicy-sample
 spec:
-  # TODO(user): Add fields here
+  targetRef:
+    name: prod-web
+    group: gateway.networking.k8s.io
+    kind: Gateway
+  issuerRef:
+    group: cert-manager.io
+    kind: ClusterIssuer
+    name: glbc-ca
